# ledger-app-provenance

./: CONTRIBUTING.md  Cargo.nix  README.md  crate-hashes.json  default.nix  hack-Cargo-nix.patch  release.nix  speculos-wrapper  tarball-default.nix  tarball-shell.nix
.cargo/: config
.github/workflows/: rust.yml
dep/alamgu/: github.json
dep/cosmos-sdk/: github.json
dep/hw-app-hash/: github.json
dep/nix-thunk/: github.json
dep/nixpkgs/: github.json
docker/: run-build-in-docker.sh
docs/: apdu.md
rust-app/: Cargo.toml  build.rs  didboom.sh  mkTarball.sh
rust-app/bin-src/: main.rs  main_nanos.rs
rust-app/src/: crypto_helpers.rs  implementation.rs  interface.rs  lib.rs  main_nanos.rs  menu.rs  trampolines.rs
rust-app/src/proto/: mod.rs
rust-app/src/proto/cosmos/: mod.rs
rust-app/src/proto/cosmos/bank/v1beta1/: mod.rs
rust-app/src/proto/cosmos/base/v1beta1/: mod.rs
rust-app/src/proto/cosmos/crypto/: mod.rs
rust-app/src/proto/cosmos/crypto/multisig/v1beta1/: mod.rs
rust-app/src/proto/cosmos/gov/: mod.rs
rust-app/src/proto/cosmos/gov/v1beta1/: mod.rs
rust-app/src/proto/cosmos/staking/v1beta1/: mod.rs
rust-app/src/proto/cosmos/tx/: mod.rs
rust-app/src/proto/cosmos/tx/signing/: mod.rs
rust-app/src/proto/cosmos/tx/signing/v1beta1/: mod.rs
rust-app/src/proto/cosmos/tx/v1beta1/: mod.rs
rust-app/src/proto/cosmos/tx/v1beta1/modeinfo/: mod.rs
rust-app/src/proto/google/: mod.rs
rust-app/src/proto/google/protobuf/: mod.rs
rust-app/tests/: ts-tests.rs
ts-tests/: basic_tests.ts  common.ts  default.nix  http-transport.ts  node-packages.nix  override.nix  package-lock.json  package.json  public-key-tests.ts  signing-tests.ts
