[package]
name = "provenance"
version = "0.1.0"
authors = ["jonored", "yhql"]
edition = "2018"
autobins = false
resolver = "2"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
ledger-crypto-helpers = { git = "https://github.com/alamgu/ledger-crypto-helpers" }
ledger-log = { git = "https://github.com/alamgu/ledger-log" }
ledger-parser-combinators = { git = "https://github.com/alamgu/ledger-parser-combinators", branch="async-split-take-2" }
zeroize = { version = "1.5.2", default-features = false }
num_enum = { version = "0.5", default-features = false }
pin-cell = "0.2.0"
pin-project = "1.0.10"
num-traits = { version = "0.2.15", default-features = false }
num-derive = "0.3.3"
bech32 = { git="https://github.com/obsidiansystems/rust-bech32", branch="std-feature-1", default-features=false, features=["arrayvec"] }
include_gif = { git = "https://github.com/LedgerHQ/sdk_include_gif" }

# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable
# speculos logging and change log level.
[features]
default = [ ]
# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable speculos logging and change log level.
speculos = [ "nanos_sdk/speculos", "ledger-log/speculos", "ledger-log/log_error", "ledger-parser-combinators/logging" ]
extra_debug = ["ledger-log/log_trace"]
pending_review_screen = ["nanos_sdk/pending_review_screen"]
rebuild_proto = ["dep:ledger-proto-gen", "dep:tempfile"]

[target.'cfg(target_family = "bolos")'.dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" }
ledger-prompts-ui = { git = "https://github.com/alamgu/ledger-prompts-ui" }
alamgu-async-block = { git = "https://github.com/alamgu/alamgu-async-block", branch = "prompt-queueing" }

[target.'cfg(target_family = "bolos")'.dev-dependencies.nanos_sdk]
git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git"
features = [ "speculos" ]

[dev-dependencies]
testmacro = { git = "https://github.com/yhql/testmacro" }

[build-dependencies]
ledger-proto-gen = { git = "https://github.com/alamgu/ledger-proto-gen", optional = true }
tempfile = { version = "3.2.0", optional = true }

[[bin]]
name = "provenance"
test = false
path = "bin-src/main.rs"

[patch."https://github.com/LedgerHQ/ledger-nanos-sdk.git".nanos_sdk]
git = "https://github.com/alamgu/ledger-nanos-sdk.git"
branch = "relocating-loader-w-fixes"

[package.metadata.nanos]
name = "Provenance"
api_level = "1"
path = ["44'/505'"]
curve = ["secp256k1"]
flags = "0"
icon = "provenance.gif"
icon_small = "provenance-small.gif"
